--- a/index.html
+++ b/index.html
@@ -245,15 +245,10 @@
               <Play className="w-24 h-24 mx-auto mb-6 text-green-400 animate-pulse" />
               <h1 className="text-5xl font-bold mb-4">Your 2025</h1>
               <h2 className="text-6xl font-bold mb-8 bg-gradient-to-r from-purple-400 to-pink-400 bg-clip-text text-transparent">
-                Music Journey
+                Year in Review
               </h2>
-              <div className="grid grid-cols-2 gap-6 max-w-md mx-auto">
-                <div className="bg-white/10 backdrop-blur-sm rounded-2xl p-6">
-                  <Clock className="w-8 h-8 mx-auto mb-2 text-blue-400" />
-                  <div className="text-3xl font-bold">{stats.totalMinutes.toLocaleString()}</div>
-                  <div className="text-purple-300">minutes listened</div>
-                </div>
-                <div className="bg-white/10 backdrop-blur-sm rounded-2xl p-6">
+              <div className="flex justify-center gap-6 max-w-md mx-auto">
+                <div className="bg-white/10 backdrop-blur-sm rounded-2xl p-6 min-w-[200px]">
                   <TrendingUp className="w-8 h-8 mx-auto mb-2 text-pink-400" />
                   <div className="text-3xl font-bold">{stats.totalPlays.toLocaleString()}</div>
                   <div className="text-purple-300">songs played</div>
